11-6-08: #917, add sim type (java or flash) to SessionStartMessage
10-31-2008: remove obsolete keys from English strings file
7-19-2007: Fixed ModuleManager to just count unique instances of clocks for purposes of verifying the number of running clocks
7-19-2007: Fixed ModuleManager to check that no clock is shared between modules