@@ -20,7 +20,8 @@ public class SessionStartedMessage extends TrackingMessage {
                 new TrackingEntry( "project", config.getProjectName() ),
                 new TrackingEntry( "sim", config.getFlavor() ),
                 new TrackingEntry( "sim-type", "java" ), // to easily distinguish between Java and Flash sims
-                new TrackingEntry( "sim-version", config.getVersion().toString() ),
+                new TrackingEntry( "sim-version", config.getVersion().formatMajorMinorDev() ),
+                new TrackingEntry( "svn-revision", config.getVersion().getRevision() ),
                 new TrackingEntry( "sim-locale", PhetResources.readLocale().toString() ),
                 new TrackingEntry( "dev", config.isDev() + "" ),
 
