@@ -1,3 +1,4 @@
+11-6-08: clean up formatting methods in PhetVersion, remove knowledge of About dialog
 11-6-08: #917, add sim type (java or flash) to SessionStartMessage
 10-31-2008: remove obsolete keys from English strings file
 7-19-2007: Fixed ModuleManager to just count unique instances of clocks for purposes of verifying the number of running clocks
